--- a/app/views/top/create.html.erb
+++ b/app/views/top/create.html.erb
@@ -1,8 +1,7 @@
-<%= form_tag '/top/login', method: :post,data:{turbo:false} do %>
+<%= form_tag ({action: :create2})  do %>
     <%= label_tag :uid, 'ユーザーID' %>
     <%= text_field_tag :uid %><br>
     <%= label_tag :pass, 'パスワード' %>
     <%= password_field_tag :pass %><br>
-    <%= submit_tag 'ログイン' %>
-    <%= link_to "アカウントを作成",top_create_path %>
+    <%= submit_tag '登録' %>
 <% end %>
